# nrqz_admin

./: .gitignore  README.md  check_file_paths.py  fix.py  gunicorn.conf.py  manage.py  pyproject.toml  requirements.txt
applicants/: filters.py  models.py  tables.py  urls.py  views.py
audit/: models.py
audits/: admin.py  columns.py  filters.py  form_helpers.py  forms.py  models.py  tables.py  urls.py  views.py
cases/: admin.py  apps.py  autocomplete_views.py  columns.py  fields.py  filters.py  form_helpers.py  forms.py  kml.py  managers.py  mixins.py  models.py  tables.py  test_managers.py  test_regex.py  tests.py  urls.py  views.py  widgets.py
docs/: Makefile
importers/: __init__.py  constants.py  converters.py  fieldmap.py  handlers.py  test_fieldmap.py
letter_templates/: default.docx
misc/: user.js
nrqz_admin/: .env.template  base.py  settings.py  urls.py  wsgi.py
submission/: admin.py  filters.py  forms.py  kml.py  models.py  tables.py  urls.py  views.py
tools/: access_technical_field_map.py  accessfieldmap.py  build_dev_data.py  error_reporter.py  excel_importer.py  excel_to_csv.py  excelfieldmap.py  field_import.py  fieldmap.py  identify_application_duplicates.py  import_access_application.py  import_access_prelim_application.py  import_access_technical_data.py  import_excel_application.py  import_nam_application.py  import_original_excel_application.py  import_report.py  merge_objects.py  merge_people.py  populate_locations.py  prelim_accessfieldmap.py  query_asr.py  query_asr_for_all_facilities.py  strip_excel_application.py  (+2 more)
utils/: layout.py  (+8 more)
(+235 files in other folders)
