[tool.poetry]
name = "nrqz_admin"
version = "0.1.0"
description = "National Radio Quiet Zone (NRQZ) application management tool"
authors = ["Thomas Chamberlin <tchamber@nrao.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
django = "~2.2"
django-crispy-forms = "^1.7"
django-debug-toolbar = "^2.0"
django-extensions = "^2.1"
django-filter = "^2.1"
django-mass-edit = { git = "https://github.com/GreenBankObservatory/django-mass-edit" }
django-sql-explorer = "^1.1"
django-stronghold = "^0.3.0"
django-tables2 = "^2.0"
django-watson = "^1.5"
docxtpl = "^0.6.2"
ipython = "^7.5"
ipython-genutils = "^0.2.0"
psycopg2-binary = "^2.8"
pyexcel = "^0.5.14"
pyexcel-xls = "^0.5.8"
pyexcel-xlsx = "^0.5.7"
requests = "^2.22"
tablib = "^0.13.0"
tabulate = "^0.8.3"
tqdm = "^4.32"
django-import-data = { git = "https://github.com/GreenBankObservatory/django-import-data" }
django-super-deduper = { git = "https://github.com/GreenBankObservatory/django-super-deduper", branch = "merge_audit" }
django-tempus-dominus = { git = "https://github.com/FlipperPA/django-tempus-dominus" }
# django-tempus-dominus = "^5.1"
pykml = { git = "https://github.com/GreenBankObservatory/pykml.git", branch = "python3" }
django-autocomplete-light = "^3.4"

[tool.poetry.dev-dependencies]
ipdb = "^0.12.0"
pydotplus = "^2.0"
black = {version = "^19.3b0", allows-prereleases = true}
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
